--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -7,7 +7,7 @@
     <string name="scoreboard_inf">Inf</string>
     <string name="scoreboard_status">État</string>
     <string name="scoreboard_coins">Coins</string>
-    <string name="continueGame">Reprendre le jeu</string>
+    <string name="continue_game">Entrer</string>
     <string name="game_start">Début du jeu.</string>
     <string name="coins_gathered">Coins collectés : %d.</string>
     <string name="next_stage">Prochain niveau: %d</string>
