--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -17,7 +17,7 @@
     <string name="scoreboard_status">Status</string>
     <string name="scoreboard_coins">Coins</string>
     <string name="selectLevel">Levelauswahl</string>
-    <string name="play_selected_level">Spiele Level</string>
+    <string name="play_selected_level">Level spielen</string>
     <string name="button_marketplace">Helden</string>
     <string name="level_entry">Level %d</string>
     <string name="level_selector">Level-Auswahl</string>
@@ -53,6 +53,17 @@ Das Verschieben ist gleichbedeutend mit einer Division durch 2."
 
 Vorsicht: Der laufende Cryptocoin ist stärker als die gewöhnlichen Angreifer. Wenn er die CPU erreicht, kostet dies ebenfalls ein Leben."
     </string>
+    <string name="instr_9">
+"Wir führen einen neuen Chip ein, nämlich MEM (für memory). Dieser nimmt eine Zahl und speichert sie weg.
+
+MEM-Chips sind mächtig, weil sie jeden Angreifer neutralisieren können, aber sie sind sehr langsam."
+    </string>
+    <string name="instr_10">"Der Akkumulator-Chip (ACC) ist etwas komplexer als die anderen, aber er kann gegen eine große Zahl von Angreifern sehr wirkungsvoll sein. Er kombiniert zwei Zahlen zu einem Ergebnis. \n\nIn der Basisvariante addiert er die beiden Zahlen. In der ersten Ausbaustufe führt er ein logisches ODER durch, in der zweiten Stufe ein logisches UND.\n \n Beispiel: Wenn die Zahlen 0110 (also 6) und 0011 (also 3) im ACC verarbeitet werden, ist das Ergebnis \n1001 (also 9) bei Addition [ACC +]\n0111 (also 7) bei ODER [ACC v]\n0010 (also 2) bei UND [ACC &amp;].\n\nDer Vorteil des ACC ist, dass er richtig schnell ist.\n\n    "</string>
+    <string name="instr_11">
+"Größere Zahlen werden hexadezimal dargestellt. Sie haben ein vorangestelltes 'x'.
+
+In Hex gibt es die Ziffern von 0 bis 9 und dann von A bis F. Die Hex-Zahl 0x0F entspricht 15 dezimal bzw. 1111 im Binärsystem."
+    </string>
     <string name="turing">
 "Alan Turing war eine der wichtigsten Persönlichkeiten in der Computerwissenschaft. Er legte viele der Grundlagen der theoretischen Informatik, unter anderem durch die Turing-Maschine und den Turing-Test. Außerdem entschlüsselte er den Enigma-Code im zweiten Weltkrieg. Sein Einfluss auf den Verlauf des Krieges kann kaum überschätzt werden.
 
@@ -61,9 +72,26 @@ Turing wurde aufgrund seiner Homosexualität massiv diskriminiert. Er starb 1954
     <string name="button_purchase">Anheuern</string>
     <string name="query_reset">Möchtest du alle Heldinnen und Helden zurücksetzen?</string>
     <string name="no">Nein</string>
-    <string name="instr_8">Du kannst Chips wieder verkaufen und so ihren Steckplatz neu verwenden.\n\nEin Teil der Information wird dir dabeu zurückerstattet.</string>
-    <string name="lovelace">"Ada Gräfin Lovelace gilt als die Erfinderin der Programmierung.\n\nZusammen mit Charles Babbage arbeitete sie mit seiner Rechenmaschine. Sie stellte ein Instruktionsset für die Berechnung der Bernoullizahlen auf, das vermutlich das erste formale Programm überhaupt war.\n\nLovelace erkannte, dass die Möglichkeiten einer programmierbaren Maschine weit über arithmetische Berechnungen hinaus gingen. Sie war zudem die erste, die zwischen symbolischen Konzepten (Software) und physischen Teilen (Hardware) unterschied.\n    "</string>
+    <string name="instr_8">
+"Du kannst Chips wieder verkaufen und so ihren Steckplatz neu verwenden.
+
+Ein Teil der Information wird dir dabeu zurückerstattet."
+    </string>
+    <string name="lovelace">
+"Ada Gräfin Lovelace gilt als die Erfinderin der Programmierung. Zusammen mit Charles Babbage arbeitete sie mit seiner Rechenmaschine. Sie stellte ein Instruktionsset für die Berechnung der Bernoullizahlen auf, das vermutlich das erste formale Programm überhaupt war.\n\nLovelace erkannte, dass die Möglichkeiten einer programmierbaren Maschine weit über arithmetische Berechnungen hinaus gingen. Sie war zudem die erste, die zwischen symbolischen Konzepten (Software) und physischen Teilen (Hardware) unterschied."
+    </string>
+    <string name="hollerith">"Datenspeicherung und -verarbeitung begann der Einführung von Lochkarten durch Herman Hollerith. Er entwickelte und vermarktete eine Tabelliermaschine für Lochkarten, mit der man Information sammeln, sortieren und auswerten konnte. Sie wurde unter anderem bei Volkszählungen in vielen Ländern eingesetzt.\n\nIm Jahr 1896 gründete Hollerith die  Tabulating Machine Company, die später zu IBM wurde.\n "</string>
+    <string name="osborne">Im Jahr 1981 baute Adam Osborne den ersten tragbaren Computer. Der \'Osborne 1\' war nicht wirklich das, was wir heute einen Laptop nennen. Er war eher ein großer Koffer, der über 11 kg wog. Trotzdem hatte er in einem kompakten Gehäude alles, was ein Computer braucht: Stromversorgung, Tastatur, zwei Diskettenlaufwerke, einen Monitor und eine Menge Software.\n\nOsborne war darüberhinaus ein Sachbuchautor und Buchverleger.\n\n</string>
+    <string name="cernettes">"Les Horribles Cernettes (alias LHC) sind die High Energy Rock Band des europäischen Forschungszentrums CERN. Sie waren die erste Band im Web.\n\nNachdem Berners-Lee das World Wide Web erfunden hatte, suchte er nach passendem Inhalt. Silvano de Gennaro gab ihm ein Foto der Cernettes, das im Juli 1992 aufgenommen war und dadurch zum ersten Foto einer Band wurde, das in Browserfenstern auf der ganzen Welt angeschaut wurde.\n "</string>
+    <string name="knuth">"Donald Ervin Knuth ist ein Informatiker und Mathematiker, dem die Theoretische Informatik zahlreiche Beiträge verdankt.\n\nEr ist hauptsächlich für sein Monumentalwerk  'The Art of Computer Programming' bekannt - ein Projekt, das 1962 begonnen hat und noch immer nicht abgeschlossen ist. Quasi en passant entwickelte Knuth dafür das Textsatzsystem TeX, das weltweit zum Standard für wissenschaftliche Veröffentlichungen geworden ist.\n "</string>
+    <string name="zuse">Der erste moderne Computer wurde 1941 von Konrad Zuse gebaut. Der Z1 war eine programmierbare elektromechanische Maschine, die auf einer binären Basis arbeitete, Boolesche Logik verwendete und sogar Fließkommazahlen kannte.\n\nZuse erfand auch die erste Programmier-Hochsprache \'Plankalkül\'.\n</string>
+    <string name="franke">"Der Physiker Herbert W. Franke war als Autor von Science-Fiction-Romanen und Sachbüchern bekannt.\n\nEr war ein Pionier in Computerkunst und -grafik und entwickelte das Konzept der \"kybernetischen Ästhetik\": Kunst, die von elektronischen Geräten und numerischen Algorithmen erschaffen wird.\n "</string>
+    <string name="vaughan">Dorothy Vaughan war einer der \"menschlichen Computer\" bei der NASA. Sie konnte komplexe mathematische Gleichungen schneller und verlässlicher lösen als die damaligen elektronischen oder mechanischen Geräte. Gemeinsam mit anderen Frauen brachte sie das amerikanische Weltraumprogramm wesentlich voran.\n\nSpäter bereitete sie als Managerin bei der NASA die Einführung elektronischer Computer vor, indem sie sich selbst und ihrem Team die Sprache FORTRAN beibrachte.</string>
+    <string name="tramiel">Als Kind überlebte Idek Tramielski Auschwitz. Er emigrierte 1947 in die USA und gründete dort 1954 Commodore International, die Schreibmaschinen baute. Im Jahr 1982 stellte Commodore den C64 vor, den ersten echten Heimcomputer der Welt.\n\nDer C64 brach alle Verkaufsrekorde. Er hatte nicht nur unglaubliche 64 kiB RAM, sondern auch hochauflösende Grafik, digitalen Sound, einen eingebauten BASIC-Interpreter und zwei Joystick-Ports. Für unzählige Menschen bedeutete der \'Brotkasten\' den Einstieg ins Computerzeitalter.\n</string>
     <string name="settings_title">Einstellungen</string>
     <string name="settings_about">Info</string>
     <string name="yes">Ja</string>
+    <string name="license">\nDieses Spiel ist Open Source Software.  Mehr Information auf  https://github.com/ochadenas/cpudefense.\n\nDie Bilder der Heldinnen und Helden basieren auf gemeinfreien Werken.\n\nAutoren der Originalfotos:\n Alex Handy (CC BY-SA 2.0)\n  Jacob Appelbaum (CC BY-SA 2.5)\n  Rama (CC BY-SA 2.0 fr)\n  Shervinafshar (CC BY-SA 3.0)\n  Tony Bove (CC BY 3.0)\n  Wolfgang Hunscher (CC BY-SA 3.0)\n\nBilder der Computerplatinen:\n  Autopilot (CC BY-SA 4.0)\n  Bill Bertram (CC-BY 2.0)\n  Oliver Chadenas (CC BY-SA 3.0)\n  Smial (FAL)\n\nAlle anderen Grafiken:\n  Oliver Chadenas (CC BY-SA 3.0)\n  \n</string>
+    <string name="play_level_x">Level %d spielen</string>
+    <string name="button_exit">Ende</string>
 </resources>
