--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -75,7 +75,7 @@ Turing wurde aufgrund seiner Homosexualität massiv diskriminiert. Er starb 1954
     <string name="instr_8">
 "Du kannst Chips wieder verkaufen und so ihren Steckplatz neu verwenden.
 
-Ein Teil der Information wird dir dabeu zurückerstattet."
+Ein Teil der Information wird dir dabei zurückerstattet."
     </string>
     <string name="lovelace">
 "Ada Gräfin Lovelace gilt als die Erfinderin der Programmierung. Zusammen mit Charles Babbage arbeitete sie mit seiner Rechenmaschine. Sie stellte ein Instruktionsset für die Berechnung der Bernoullizahlen auf, das vermutlich das erste formale Programm überhaupt war.\n\nLovelace erkannte, dass die Möglichkeiten einer programmierbaren Maschine weit über arithmetische Berechnungen hinaus gingen. Sie war zudem die erste, die zwischen symbolischen Konzepten (Software) und physischen Teilen (Hardware) unterschied."
@@ -94,4 +94,18 @@ Ein Teil der Information wird dir dabeu zurückerstattet."
     <string name="license">\nDieses Spiel ist Open Source Software.  Mehr Information auf  https://github.com/ochadenas/cpudefense.\n\nDie Bilder der Heldinnen und Helden basieren auf gemeinfreien Werken.\n\nAutoren der Originalfotos:\n Alex Handy (CC BY-SA 2.0)\n  Jacob Appelbaum (CC BY-SA 2.5)\n  Rama (CC BY-SA 2.0 fr)\n  Shervinafshar (CC BY-SA 3.0)\n  Tony Bove (CC BY 3.0)\n  Wolfgang Hunscher (CC BY-SA 3.0)\n\nBilder der Computerplatinen:\n  Autopilot (CC BY-SA 4.0)\n  Bill Bertram (CC-BY 2.0)\n  Oliver Chadenas (CC BY-SA 3.0)\n  Smial (FAL)\n\nAlle anderen Grafiken:\n  Oliver Chadenas (CC BY-SA 3.0)\n  \n</string>
     <string name="play_level_x">Level %d spielen</string>
     <string name="button_exit">Ende</string>
+    <string name="shortdesc_SUB">Geschw. der SUB-Chips</string>
+    <string name="shortdesc_startinfo">Info bei Start</string>
+    <string name="shortdesc_SHR">Geschw. SHR-Chips</string>
+    <string name="shortdesc_ACC">Geschw. ACC-Chips</string>
+    <string name="shortdesc_MEM">Geschw. MEM-Chips</string>
+    <string name="shortdesc_upgrade">Kosten für Upgrade</string>
+    <string name="shortdesc_lives">Extra-Leben</string>
+    <string name="shortdesc_frequency">Frequenz der Angreifer</string>
+    <string name="shortdesc_att_speed">Geschw. der Angreifer</string>
+    <string name="shortdesc_info_gain">Informationsgewinn</string>
+    <string name="shortdesc_refund">Erstattung bei Verkauf</string>
+    <string name="upgrade_format">%s  [Kosten: %d]</string>
+    <string name="toast_next_stage">Level %d</string>
+    <string name="toast_stage_cleared">Level geschafft</string>
 </resources>
