--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,28 +166,7 @@ The record-selling C64 not only had an enormous 64 kiB of RAM, it also featured 
     </string>
     <string name="settings_title">Settings</string>
     <string name="settings_about">About</string>
-    <string name="license">
-        "
-This game is open source. Visit https://github.com/ochadenas/cpudefense for more information.
-
-The portraits of the Information Age Heroes are derived from works of the public domain.
-
-Original photos:
-  Alex Handy (CC BY-SA 2.0)
-  Jacob Appelbaum (CC BY-SA 2.5)
-  Rama (CC BY-SA 2.0 fr)
-  Shervinafshar (CC BY-SA 3.0)
-  Tony Bove (CC BY 3.0)
-  Wolfgang Hunscher (CC BY-SA 3.0)
-
-Computer boards:
-  Autopilot (CC BY-SA 4.0)
-  Bill Bertram (CC-BY 2.0)
-  Oliver Chadenas (CC BY-SA 3.0)
-  Smial (FAL)
-
-All other artwork:
-  Oliver Chadenas (CC BY-SA 3.0)"</string>
+    <string name="license">\n        \nThis game is open source. Visit https://github.com/ochadenas/cpudefense for more information.\n\nThe portraits of the Information Age Heroes are mostly derived from works of the public domain.\n\nOriginal photos:\n  Alex Handy (CC BY-SA 2.0)\n  Jacob Appelbaum (CC BY-SA 2.5)\n  Rama (CC BY-SA 2.0 fr)\n  Shervinafshar (CC BY-SA 3.0)\n  Tony Bove (CC BY 3.0)\n  Wolfgang Hunscher (CC BY-SA 3.0)\n  Silvano de Gennaro (courtesy of the author)\n\nComputer boards:\n  Autopilot (CC BY-SA 4.0)\n  Bill Bertram (CC-BY 2.0)\n  Oliver Chadenas (CC BY-SA 3.0)\n  Smial (FAL)\n\nAll other artwork:\n  Oliver Chadenas (CC BY-SA 3.0)</string>
     <string name="play_level_x">Play level %d</string>
     <string name="button_exit">Exit</string>
     <string name="shortdesc_SUB">SUB chip speed</string>
