--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -68,4 +68,5 @@
     <string name="upgrade_format">%s  [coût: %d]</string>
     <string name="toast_next_stage">Niveau %d</string>
     <string name="toast_stage_cleared">Niveau réussi</string>
+    <string name="toast_loading">Chargement ...</string>
 </resources>
