--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -129,4 +129,7 @@ Ein Teil der Information wird dir dabei zurückerstattet."
     <string name="HERO_EFFECT_ATTSPEED">verringert die Geschwindigkeit der Angreifer</string>
     <string name="HERO_EFFECT_REFUNDPRICE">erhöht die Erstattung beim Verkauf von Chips</string>
     <string name="toast_loading">Lade Daten ...</string>
+    <string name="name_series_1">Serie 1</string>
+    <string name="name_series_2">Serie 2</string>
+    <string name="message_series_unavailable">Wird freigeschaltet, wenn alle Level in Serie 1 geschafft sind.</string>
 </resources>
