--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -68,8 +68,20 @@
     <string name="upgrade_format">%s  [coût: %d]</string>
     <string name="toast_next_stage">Niveau %d</string>
     <string name="toast_stage_cleared">Niveau réussi</string>
+    <string name="HERO_EFFECT_CHIPSPEED">réduit le temps de recharge de toutes les puces</string>
+    <string name="HERO_EFFECT_STARTINFO">démarre tous les niveaux avec plus d\'info\n</string>
+    <string name="HERO_EFFECT_UPGRADECOST">réduit les coûts d\'amélioration</string>
+    <string name="HERO_EFFECT_LIVES">accorde des vies supplémentaires</string>
+    <string name="HERO_EFFECT_FREQUENCY">réduit la fréquence des attaquants</string>
+    <string name="HERO_EFFECT_INFOOVERTIME">gagne de l\'information au fil du temps</string>
+    <string name="HERO_EFFECT_ATTSPEED">réduit la vitesse des attaquants</string>
+    <string name="HERO_EFFECT_REFUNDPRICE">"augmente le remboursement lors "</string>
     <string name="toast_loading">Chargement ...</string>
-    <string name="name_series_1">Série 1</string>
-    <string name="name_series_2">Série 2</string>
-    <string name="message_series_unavailable">Complétez tous les niveaux en série 1 d\'abord.</string>
+    <string name="name_series_1">Normal</string>
+    <string name="name_series_2">Turbo</string>
+    <string name="message_series_unavailable">Complétez tous les niveaux en mode normal d\'abord.</string>
+    <string name="series_completed_message_1">" "</string>
+    <string name="series_completed_message_2">Vous pouvez rejouer</string>
+    <string name="series_completed_message_3">tous les niveaux</string>
+    <string name="series_completed_message_4">en mode \'turbo\'.</string>
 </resources>
