--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -120,7 +120,7 @@ Ein Teil der Information wird dir dabei zurückerstattet."
     <string name="toast_stage_cleared">Level geschafft</string>
     <string name="instr_12">Zwei weitere Chiparten: ADD und SHL.\n\nDiese tun das Gegenteil von SUB und SHR: Sie subtrahieren 1 von der Zahl bzw. schieben die Bits nach links.\n\nDas ist natürlich unerwünscht, denn es macht die Zahlen größer. Für diese Chips bedeutet ein \'Upgrade\', dass sie schwächer werden oder ganz verschwinden.</string>
     <string name="instr_13">"Beachte, dass CryptoCoins weder von ACC- noch von MEM-Chips beeinflusst werden.\n "</string>
-    <string name="HERO_EFFECT_CHIPSPEED">verringert die Abklingzeit aller Chips</string>
+    <string name="HERO_EFFECT_CHIPSPEED">verringert die Abklingzeit aller %s Chips</string>
     <string name="HERO_EFFECT_STARTINFO">startet alle Level mit mehr Information</string>
     <string name="HERO_EFFECT_UPGRADECOST">verringert die Kosten für Upgrades</string>
     <string name="HERO_EFFECT_LIVES">gewährt zusätzliche Leben</string>
@@ -132,8 +132,11 @@ Ein Teil der Information wird dir dabei zurückerstattet."
     <string name="name_series_1">Normal</string>
     <string name="name_series_2">Turbo</string>
     <string name="message_series_unavailable">Wird freigeschaltet, wenn alle Level im Modus \"Normal\" geschafft sind.</string>
+    <string name="stage_reached">Erreichter Level: %s %d</string>
     <string name="series_completed_message_1">" "</string>
     <string name="series_completed_message_2">Du kannst alle Levels</string>
     <string name="series_completed_message_3">nun noch einmal im</string>
     <string name="series_completed_message_4">\'Turbo\'-Modus spielen.</string>
+    <string name="instr_2_1">Im Turbo-Modus sind die Angreifer schneller, stärker und zahlreicher.\n\nZusätzlich sind einige Slots schon mit unerwünschten Chips belegt, mit denen du fertig werden musst.\n</string>
+    <string name="wiener">" Norbert Wiener ist als Begründer der Kybernetik bekannt, also der Steuerung und Regelung von Maschinen, und ist damit einer der Wegbereiter von Künstlicher Intelligenz. Der von ihm geprägte Begriff 'cyber' ist heute allgegenwärtig.  Er entwickelte mathematische Theorien, vor allem im Bereich der Mustererkennung und Bildbearbeitung, und bewies eine Reihe von mathematischen Sätzen.  Aufgrund der Erfahrungen im 2. Weltkrieg nahm er eine zunehmend pazifistische Haltung ein und weigerte sich, Werke zu veröffentlichen, die in den Händen von Militaristen Schaden anrichten könnten.     "</string>
 </resources>
